addition to the creator profile feature's wireframe

--- a/client-app/src/app/layout/styles.scss
+++ b/client-app/src/app/layout/styles.scss
@@ -16,3 +16,90 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ProseMirror:focus {
+  outline: none;
+}
+
+/* Basic editor styles */
+.tiptap {
+  > * + * {
+    margin-top: 0.75em;
+  }
+
+  ul,
+  ol {
+    padding: 0 1rem;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 1.1;
+  }
+
+  code {
+    background-color: rgba(#616161, 0.1);
+    color: #616161;
+  }
+
+  pre {
+    background: #0D0D0D;
+    color: #FFF;
+    font-family: inherit;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+
+    code {
+      color: inherit;
+      padding: 0;
+      background: none;
+      font-size: 0.8rem;
+    }
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  blockquote {
+    padding-left: 1rem;
+    border-left: 2px solid rgba(#0D0D0D, 0.1);
+  }
+
+  hr {
+    border: none;
+    border-top: 2px solid rgba(#0D0D0D, 0.1);
+    margin: 2rem 0;
+  }
+}
+
+#editor-menu-div {
+  button {
+    font-size: inherit;
+    font-family: inherit;
+    color: #000;
+    margin: 0.1rem;
+    border: 1px solid black;
+    border-radius: 0.3rem;
+    padding: 0.1rem 0.4rem;
+    background: rgba(#fff, 0.4);
+    accent-color: black;
+    &:hover {
+      color: white;
+      background-color: $bgcolor-violet;
+    }
+  }
+
+  button.is-active {
+    background: black;
+    color: #fff;
+    &:hover {
+      background-color: darkgray;
+    }
+  }
+}
