finishing up the creator profiles edits, followers/following cards.

--- a/client-app/src/app/layout/styles.scss
+++ b/client-app/src/app/layout/styles.scss
@@ -22,6 +22,10 @@ code {
 }
 
 /* Basic editor styles */
+.ProseMirror {
+  border: '1px solid red' !important
+}
+
 .tiptap {
   > * + * {
     margin-top: 0.75em;
