continuation for the chat feature

--- a/client-app/src/app/layout/styles.scss
+++ b/client-app/src/app/layout/styles.scss
@@ -168,3 +168,7 @@ button.edit-mode-active {
 .profile-header {
   position: relative;
 }
+
+.MuiOutlinedInput.Mui-focused { 
+  border-color: #DDDDDD;
+}
