--- a/client-app/src/app/layout/styles.scss
+++ b/client-app/src/app/layout/styles.scss
@@ -4,7 +4,7 @@ $gray: rgba(221, 221, 221, 0.4);
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Monospace', 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Monospace', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
